--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -50,25 +50,8 @@
                             </ul>
                             <div class="d-flex flex-column flex-sm-row">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                          Area Personal
-                                        </a>
-                                        <div class="dropdown-menu mb-2" style="min-width: 200px;padding: 15px; padding-bottom: 10px;">
-                                            <form class="form-vertical" method="post" accept-charset="UTF-8">
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text"><i class="fa-solid fa-user"></i></span>
-                                                    <input class="form-control login" type="text" name="username" placeholder="Usuario"/>
-                                                </div>
-                                                <div class="input-group mb-3">
-                                                    <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
-                                                    <input class="form-control login" type="password" name="password" placeholder="Contraseña"/>
-                                                </div>
-                                                <div class="d-grid gap-2">
-                                                    <input class="btn btn-fondoPer" type="submit" name="submit" value="Acceder"/>
-                                                </div>
-                                            </form>
-                                        </div>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#"><p:outputLabel value="#{beanLogin.usu.nombre}"/></a>
                                     </li>
                                 </ul>
                                 <form class="d-flex flex-row">
