--- a/src/main/webapp/resources/css/inicio.css
+++ b/src/main/webapp/resources/css/inicio.css
@@ -41,7 +41,7 @@
 }
 
 .contenido {
-    margin-top: 100px;
+    /*margin-top: 100px;*/
     justify-content: center !important;
     position: relative;
     z-index: 2 !important;
