--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -15,49 +15,52 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
         <h:outputScript name="js/ipl.js"/>
         <h:outputScript name="js/utilidades.js"/>
+        <script>
+            $(function() {
+                $('.botonLogout').html('')
+                $('.botonLogout').html('<i class="fa-solid fa-arrow-right-from-bracket"></i>')
+            });
+        </script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/smoothness/jquery-ui.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
         <h:outputStylesheet name="css/style.css"/>
         <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/RATX-Developer-Team/Atlanthis/main/dise%C3%B1o/AtlanthisFavicon48.ico"/>
     </h:head>
-
     <h:body>
-        <div class="row fondo">
-        </div>
         <header class="sticky-top container-fluid fondoBarra">
             <div class="container">
-                <nav class="navbar navbar-expand-sm bg-transparent navbar-light">
+                <nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
                     <div class="container-fluid">
-                        <a class="navbar-brand fs-3" href="#">
+                        <p:link class="navbar-brand fs-3" href="index.xhtml">
                             <p:graphicImage name="img/logo.png" class="img-responsive" height="80" alt="Logotipo del foro Atlanthis."/>
-                        </a>
-                        <button class="navbar-toggler m-auto" type="button" data-bs-toggle="collapse"
+                        </p:link>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapsibleNavbar">
                             <span class="navbar-toggler-icon m-auto"></span>
                         </button>
                         <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="#">Inicio</a>
+                                    <p:link class="nav-link active" href="index.xhtml">Inicio</p:link>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Productos</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Contactar</a>
+                                    <p:link class="nav-link" href="discusiones.xhtml">Discusiones</p:link>
                                 </li>
                             </ul>
                             <div class="d-flex flex-column flex-sm-row">
                                 <ul class="navbar-nav">
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#"><p:outputLabel value="#{beanLogin.usu.nombre}"/></a>
+                                    <li class="nav-item d-flex flex-row align-items-center">
+                                        <p:link class="nav-link" href="perfil.xhtml">#{beanLogin.usu.nombre}</p:link>
+                                        <h:form styleClass="ms-2 ms-sm-0" style="display: inline;">
+                                            <h:commandLink value="" style="display: inline;" action="#{beanLogin.logout()}" styleClass="botonLogout nav-link" />
+                                        </h:form>
                                     </li>
                                 </ul>
                                 <form class="d-flex flex-row">
-                                        <input class="form-control me-2 mr-0" type="Busqueda" placeholder="Busqueda"
+                                        <input class="form-control me-2 mr-0 campo" type="Busqueda" placeholder="Busqueda"
                                             aria-label="Busqueda"/>
-                                        <button class="btn btn-fondoPer m-0" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                                        <button class="btn btn-outline-personalizado m-0" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
                                 </form>
                             </div>
                         </div>
