--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -29,11 +29,11 @@
     </h:head>
     <h:body>
         <header class="sticky-top container-fluid fondoBarra">
-            <div class="container">
+            <div class="container-fluid">
                 <nav class="navbar navbar-expand-sm bg-transparent navbar-dark">
                     <div class="container-fluid">
                         <p:link class="navbar-brand fs-3" href="index.xhtml">
-                            <p:graphicImage name="img/logo.png" class="img-responsive" height="80" alt="Logotipo del foro Atlanthis."/>
+                            <p:graphicImage name="img/logo.png" class="img-responsive" height="65" alt="Logotipo del foro Atlanthis."/>
                         </p:link>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapsibleNavbar">
@@ -51,8 +51,9 @@
                             <div class="d-flex flex-column flex-sm-row">
                                 <ul class="navbar-nav">
                                     <li class="nav-item d-flex flex-row align-items-center">
+                                        <p:graphicImage name="img/#{beanLogin.usu.imagen}" class="img-responsive fotoPerfil me-2 me-sm-0 mb-1 mb-sm-0" height="40" alt="Foto de perfil"/>
                                         <p:link class="nav-link" href="perfil.xhtml">#{beanLogin.usu.nombre}</p:link>
-                                        <h:form styleClass="ms-2 ms-sm-0" style="display: inline;">
+                                        <h:form styleClass="ms-1 ms-sm-0" style="display: inline;">
                                             <h:commandLink value="" style="display: inline;" action="#{beanLogin.logout()}" styleClass="botonLogout nav-link" />
                                         </h:form>
                                     </li>
