--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -21,6 +21,8 @@
                 $('.botonLogout').html('<i class="fa-solid fa-arrow-right-from-bracket"></i>')
             });
         </script>
+        <ui:insert name="scripts">   
+        </ui:insert>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/smoothness/jquery-ui.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
@@ -71,8 +73,8 @@
         </header>
         <main>
         <ui:insert name="contenido">
-		Contenido por defecto para que no quede en blanco...    
-	</ui:insert>
+		    Contenido por defecto para que no quede en blanco...    
+        </ui:insert>
         </main>
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
