--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -14,6 +14,20 @@
 body {
     background-color: #F6F8FF !important;
 }
+
+.enlaceHilo {
+    max-width: 200px;
+    width: 200px;
+    min-width: 200px;
+}
+
+.enlaceHilo h4 {
+    height: 30px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 .tituloCategoria {
     padding-top: 10px;
     padding-bottom: 10px;
