--- a/src/main/webapp/templates/template.xhtml
+++ b/src/main/webapp/templates/template.xhtml
@@ -52,7 +52,7 @@
                                     <li class="nav-item d-flex flex-row align-items-center">
                                         <h:inputText style="display: none!important;" value="#{beanLogin.usu.codUsuario}" styleClass="codUsuarioFinal"/>
                                         <p:graphicImage name="img/#{beanLogin.usu.imagen}" class="img-responsive fotoPerfil me-2 me-sm-0 mb-1 mb-sm-0" height="40" alt="Foto de perfil"/>
-                                        <p:link class="nav-link" href="perfil.xhtml">#{beanLogin.usu.nombre}</p:link>
+                                        <p:link class="nav-link" href="miperfil.xhtml">#{beanLogin.usu.nombre}</p:link>
                                         <h:form styleClass="ms-1 ms-sm-0" style="display: inline;">
                                             <h:commandLink value="" style="display: inline;" action="#{beanLogin.logout()}" styleClass="botonLogout nav-link" />
                                         </h:form>
