--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -15,6 +15,14 @@
     padding-top: 8px;
 }
 
+.contendorRespuesta {
+    background-color: white;
+    padding: 20px 10px;
+    padding-bottom: 7px;
+    box-shadow: 2px 2px 1px rgb(136 136 136 / 9%);
+    margin-bottom: 20px;
+}
+
 .contenedorInfo ul li span {
     font-weight: bold !important;
     color: var(--colorPrincipal);
