Proyecto Terminado, falta PDF

--- a/src/main/webapp/templates/template_admin.xhtml
+++ b/src/main/webapp/templates/template_admin.xhtml
@@ -55,19 +55,19 @@
                     </li>
                 <h:panelGroup layout="block" id="container1" rendered="#{beanAdmin.user.permiso>1}">
                     <li class="nav-item active">
-                        <p:link class="nav-link active" href="admin_princi.xhtml">
+                        <p:link class="nav-link active" href="admin_hilos.xhtml">
                             <i class="fa-solid fa-copy"></i>
                             <span>Hilos</span>
                         </p:link>
                     </li>
                     <li class="nav-item active">
-                        <p:link class="nav-link active" href="admin_princi.xhtml">
+                        <p:link class="nav-link active" href="admin_categorias.xhtml">
                             <i class="fa-regular fa-star"></i>
                             <span>Categorias</span>
                         </p:link>
                     </li>
                     <li class="nav-item active">
-                        <p:link class="nav-link active" href="admin_princi.xhtml">
+                        <p:link class="nav-link active" href="admin_subcategorias.xhtml">
                             <i class="fa-solid fa-star"></i>
                             <span>Subcategorias</span>
                         </p:link>
@@ -81,7 +81,7 @@
                         Control Usuarios
                     </div>
                     <li class="nav-item active">
-                        <p:link class="nav-link active" href="admin_princi.xhtml">
+                        <p:link class="nav-link active" href="admin_usuarios.xhtml">
                             <i class="fa-solid fa-users"></i>
                             <span>Usuarios</span>
                         </p:link>
