--- a/src/main/webapp/resources/css/admin.css
+++ b/src/main/webapp/resources/css/admin.css
@@ -7,6 +7,14 @@ div ul li a.nav-link {
     color: rgb(0,0,0) !important;
 }
 
+select.form-control:focus {
+    color: #000000!important;
+    background-color: rgb(255, 255, 255)!important;
+    border-color: #000000!important;
+    outline: 0!important;
+    box-shadow: 0 0 0 0.25rem rgba(0, 22, 83, 0.25)!important;
+}
+
 .sidebar {
     width: 6.5rem;
     min-height: 100vh;
